# memory

./: .dockerignore  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  README.md  _config.yml  compose.yaml  memory-layer.toml.example  watchers-tab-plan.txt
.agents/: memory-layer.toml
.brv/: config.json
.brv/context-tree/: .snapshot.json
.claude/plans/: consolidation-delta-3vi-774.md  e7-classroom-track.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: agent-pr.yml  agent-task.yml  ci.yml  nightly.yml  release.yml
Formula/: memory-layer.rb
classroom/: README.md  compose.classroom.yaml  seed.sh  worksheet.md
clients/python/: README.md  pyproject.toml
clients/python/examples/: quickstart.ipynb
clients/python/src/memory_layer/: __init__.py
clients/python/tests/: test_client.py
clients/typescript/: README.md  package-lock.json  package.json
crates/mem-agenttop/: Cargo.toml
crates/mem-agenttop/src/: lib.rs
crates/mem-agenttop/src/collector/: claude.rs  codex.rs  mod.rs  process.rs  rate_limit.rs
crates/mem-agenttop/src/model/: session.rs
crates/mem-analyze/: Cargo.toml
crates/mem-analyze/src/: lib.rs
crates/mem-api/: Cargo.toml
crates/mem-api/src/: lib.rs  types.rs
crates/mem-cli/: Cargo.toml
crates/mem-cli/src/: commits.rs  error_hints.rs  main.rs  plan_execution.rs  resume.rs  scan.rs  telemetry.rs  tui.rs  wizard.rs  writer_identity.rs
crates/mem-cli/src/assets/: demo-corpus.json
crates/mem-cli/src/commands/: activities.rs  agent.rs  api.rs  archive.rs  automation.rs  bundle.rs  capture.rs  checkpoint.rs  commits.rs  completion.rs  consolidate.rs  curate.rs  demo.rs  dev.rs  doctor.rs  embeddings.rs  eval.rs  eval_support.rs  graph.rs  health.rs  history.rs  ingest.rs  init.rs  init_support.rs  loops.rs  mcp.rs  memory_ops.rs  mod.rs  output.rs  proposals.rs  prune_history.rs  query.rs  reinforcement.rs  remember.rs  repo.rs  resume.rs  runtime.rs  scan.rs  service.rs  service_support.rs  (+13 more)
crates/mem-cli/src/commands/runtime/: tests.rs
crates/mem-cli/src/tui/: app.rs  markdown.rs  render.rs  runtime.rs  state.rs  theme.rs
crates/mem-cli/src/tui/app/: tests.rs
crates/mem-cli/src/tui/tabs/: activity.rs  agents.rs  automations.rs  embeddings.rs  errors.rs  memories.rs  mod.rs  project.rs  query.rs  resume.rs  review.rs  skills.rs  watchers.rs
crates/mem-consolidate/: Cargo.toml
crates/mem-curate/: Cargo.toml
crates/mem-curate/src/: lib.rs  repository.rs
crates/mem-curate/tests/: db.rs
crates/mem-eval/: Cargo.toml
crates/mem-eval/src/: lib.rs
crates/mem-graph/: Cargo.toml
crates/mem-graph/src/: lib.rs  repository.rs
crates/mem-graph/tests/: db.rs
crates/mem-ingest/: Cargo.toml
crates/mem-loops/: Cargo.toml
crates/mem-mcp/: Cargo.toml
crates/mem-mcp/src/: lib.rs
crates/mem-platform/: Cargo.toml
crates/mem-reinforce/: Cargo.toml
crates/mem-reinforce/src/: lib.rs  procedural.rs  propagation.rs  recorder.rs  repository.rs  scoring.rs  selection.rs
crates/mem-reinforce/src/validate/: apply.rs  evidence.rs  mod.rs  verdict.rs
crates/mem-reinforce/tests/: db.rs
crates/mem-search/: Cargo.toml
crates/mem-search/src/: embedding_backend.rs  lib.rs  repository.rs
crates/mem-search/tests/: db.rs
crates/mem-service/: Cargo.toml
crates/mem-service/src/: auth.rs  consolidate.rs  error.rs  lib.rs  llm.rs  main.rs  mcp_http.rs  offline.rs  prelude.rs  reinforcement.rs  repository.rs  routes.rs  runtime.rs  runtime_status.rs  state.rs  tests.rs
crates/mem-service/src/handlers/: activity.rs  bundle.rs  curation.rs  mod.rs  project.rs  provenance.rs  query.rs  system.rs
crates/mem-service/src/repository/: events.rs  mod.rs  stream.rs
crates/mem-service/src/repository/handlers/: agents.rs  bundle.rs  consolidation.rs  embeddings.rs  graph.rs  loops.rs  memory.rs  mod.rs  project.rs  provenance.rs  reinforcement.rs  system.rs
crates/mem-service/tests/: db_repository.rs  openapi_contract.rs
crates/mem-skills/: Cargo.toml
crates/mem-skills/src/: lib.rs
crates/mem-test-support/: Cargo.toml
crates/mem-watch/: Cargo.toml
crates/mem-watch/src/: lib.rs  main.rs
demo/: README.md  make-demo.sh  render_demo.py  script.md  storyboard.md
deploy/: config.docker.toml
docs/: SKILL.md  getting-started.md  index.md  roadmap.md
docs-site/: EDITING.md  Memory Docs.code-workspace  README.md  docs.json  features.mdx  index.mdx  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  quickstart.mdx  showcase.mdx  tsconfig.tsbuildinfo
docs-site/agents/: agent-briefings.mdx  agent-install-prompt.mdx  agent-project-init-prompt.mdx  claude-code.mdx  codex-cli.mdx  generic-agent.mdx  index.mdx  permissions-and-safety.mdx
docs-site/app/: global.css  layout.tsx
docs-site/components/: docs-footer.tsx  tui-screenshot-mosaic.tsx
docs-site/concepts/: activity-events.mdx  code-graph.mdx  curation.mdx  embeddings.mdx  evidence.mdx  index.mdx  memories.mdx  mental-model.mdx  projects.mdx  retrieval.mdx  (+1 more)
migrations/: 0001_init.sql  0002_repair_schema.sql  0003_hybrid_search.sql  0004_pgvector.sql  0005_commit_history.sql  0006_cluster_agent.sql  0007_writer_identity.sql  0008_embedding_provenance.sql  0009_multi_embedding_spaces.sql  0010_memory_bundles.sql  0011_project_timeline.sql  0012_memory_replacement_proposals.sql  0013_memory_versions.sql  0014_activity_metadata.sql  0015_code_graph.sql  0016_drop_legacy_dimensionless_embedding_hnsw.sql  0017_memory_source_provenance.sql  0018_memory_source_symbols.sql  0019_loop_automation_control_plane.sql  0020_loop_setting_audit.sql  0021_code_graph_visualization_indexes.sql  0022_agent_workspaces.sql  0023_memory_reinforcement.sql  0024_procedural_utility.sql  0025_graph_trgm_indexes.sql
packaging/: build-deb.sh  build-pkg.sh
scripts/: generate-tui-doc-screenshots.py  install-local.sh  install.sh
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/src/: api.ts  (+4 more)
(+642 files in other folders)
