[workspace]
members = [
  "crates/mem-analyze",
  "crates/mem-platform",
  "crates/mem-api",
  "crates/mem-watch",
  "crates/mem-cli",
  "crates/mem-curate",
  "crates/mem-ingest",
  "crates/mem-search",
  "crates/mem-service",
]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2024"
license = "MIT"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
config = { version = "0.15.18", default-features = false, features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls"] }
futures-util = "0.3.31"
socket2 = "0.5.10"
tokio-tungstenite = { version = "0.24.0", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
sha2 = "0.10.9"
humantime-serde = "1.1.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
capnp = "0.19.8"
pgvector = { version = "0.4.1", features = ["sqlx"] }
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
regex = "1.12.2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
toml = "0.8.23"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.release]
lto = true
codegen-units = 1
