[package]
name = "mem-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
autobins = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
mem-agenttop = { path = "../mem-agenttop" }
mem-analyze = { path = "../mem-analyze" }
mem-api = { path = "../mem-api" }
mem-eval = { path = "../mem-eval" }
mem-graph = { path = "../mem-graph" }
mem-platform = { path = "../mem-platform" }
mem-service = { path = "../mem-service" }
mem-watch = { path = "../mem-watch" }
notify.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
capnp.workspace = true
uuid.workspace = true
toml.workspace = true
humantime = "2"

[[bin]]
name = "memory"
path = "src/main.rs"
