[package]
name = "mem-curate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
mem-api = { path = "../mem-api" }
mem-ingest = { path = "../mem-ingest" }
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
