[package]
name = "mem-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mem-api = { path = "../mem-api" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
