[package]
name = "mem-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mem-analyze = { path = "../mem-analyze" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[lints]
workspace = true
