[package]
name = "mem-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mem-analyze = { path = "../mem-analyze" }
mem-api = { path = "../mem-api" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
mem-test-support = { path = "../mem-test-support" }
tokio.workspace = true

[lints]
workspace = true
