[package]
name = "mem-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mem-api = { path = "../mem-api" }
mem-platform = { path = "../mem-platform" }
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true

