[package]
name = "mem-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
config.workspace = true
mem-api = { path = "../mem-api" }
mem-curate = { path = "../mem-curate" }
mem-platform = { path = "../mem-platform" }
mem-search = { path = "../mem-search" }
mem-watch = { path = "../mem-watch" }
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
capnp.workspace = true
