[package]
name = "mem-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
autobins = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
config.workspace = true
mem-agenttop = { path = "../mem-agenttop" }
mem-api = { path = "../mem-api" }
async-trait = "0.1"
mem-curate = { path = "../mem-curate" }
mem-reinforce = { path = "../mem-reinforce" }
mem-graph = { path = "../mem-graph" }
mem-ingest = { path = "../mem-ingest" }
mem-loops = { path = "../mem-loops" }
mem-mcp = { path = "../mem-mcp" }
mem-platform = { path = "../mem-platform" }
mem-search = { path = "../mem-search" }
mem-skills = { path = "../mem-skills" }
mem-watch = { path = "../mem-watch" }
futures-util.workspace = true
duckdb.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
socket2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
urlencoding.workspace = true
capnp.workspace = true
regex.workspace = true
sha2.workspace = true
zip.workspace = true
toml_edit = "0.23"
libc = "0.2"

[dev-dependencies]
mem-test-support = { path = "../mem-test-support" }
