[package]
name = "mem-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mem-api = { path = "../mem-api" }
mem-platform = { path = "../mem-platform" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
zip.workspace = true
