[package]
name = "mem-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mem-api = { path = "../mem-api" }
mem-platform = { path = "../mem-platform" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
toml.workspace = true

[[bin]]
name = "memory-watch"
path = "src/main.rs"

[lints]
workspace = true
